Actualización de almacenamiento web

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-APP_PASSWORD=<tu_password_privada>
+APP_PASSWORD=dp12345
+SUPABASE_URL=https://xxxx.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=tu_service_role_key
+SUPABASE_BUCKET=e_bandeja_docs
