--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
+    "multer": "^2.0.2",
     "express": "^4.21.2"
   }
 }
