--- a/render.yaml
+++ b/render.yaml
@@ -9,3 +9,11 @@ services:
     envVars:
       - key: NODE_VERSION
         value: 20.11.1
+      - key: APP_PASSWORD
+        sync: false
+      - key: SUPABASE_URL
+        sync: false
+      - key: SUPABASE_SERVICE_ROLE_KEY
+        sync: false
+      - key: SUPABASE_BUCKET
+        value: e_bandeja_docs
